--- a/style/sass/variables.scss
+++ b/style/sass/variables.scss
@@ -1,3 +1,7 @@
+$Source-Sans-Pro:'Source Sans Pro', sans-serif;
+$Baseline:16px;
+@import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro';
+
 .wrapper{
   @include outer-container();
 }
