--- a/style/sass/home.scss
+++ b/style/sass/home.scss
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 ::-webkit-input-placeholder {
 	//padding-left:20px;
 	color: #95BCFF;
@@ -144,13 +143,36 @@
 		border: 2px solid #F1F2F3;
 		border-radius: 3px;
 		background-color: #FFFFFF;
+		img {
+			max-width: 100%;
+		}
 		@include media($md) {
+			@include span-columns(6);
+			margin-left: auto;
+			margin-right: auto;
+			img {
+				max-width: 100%;
+				margin-left: auto;
+				margin-right: auto;
+				display: block;
+			}
+		}
+		@include media($mobile) {
 			@include span-columns(12);
+			img {
+				max-width: 100%;
+				margin-left: auto;
+				margin-right: auto;
+				display: block;
+			}
 		}
 	}
 	.more {
 		text-align: center;
 		padding-top: 55px;
+		@include media($xl){
+			padding-top:35px;
+		}
 	}
 }
 
@@ -187,36 +209,44 @@
 		@include span-columns(1);
 		img {
 			width: 90px;
+			@include media($mobile){
+				margin-left:40px;
+			}
 		}
 		@include media($mobile) {
 			padding: 20px 0 0 0;
 			@include shift(0);
 			@include span-columns(1);
 		}
-		@include media($xl) {}
+		@include media($xl) {
+			@include shift(3);
+		}
+		@include media($md){
+			@include shift(2);
+		}
 	}
 	.hello {
-		@include media($md) {
-			float: right;
-		}
 		@include media($mobile) {
-			float: none;
+
 			@include span-columns(11);
+			@include shift(-0.5);
 		}
-		@include media($xl) {}
+		@include media($xl) {
+			@include shift(0.5);
+		}
 		@include span-columns(4);
 		h5 {
 			color: #FE1375;
 			@include media($mobile) {
 				font-size: $Baseline;
-				@include shift(5);
+				@include shift(3);
 				padding-top: 30px;
 			}
 		}
 		h3 {
 			color: #FFFFFF;
 			@include media($mobile) {
-				@include shift(4);
+				@include shift(2);
 			}
 		}
 		.input {
@@ -235,6 +265,9 @@
 			width: 218px;
 			color: white;
 			margin-bottom: 10px;
+			@include media($mobile){
+				@include shift(1);
+			}
 		}
 		#inptHelp {
 			background-color: $blue;
@@ -249,6 +282,9 @@
 			}
 			@include media($xl) {
 				width: 218px;
+			}
+			@include media($mobile){
+				@include shift(1);
 			}
 		}
 		.button-white {
@@ -266,171 +302,9 @@
 			line-height: 22px;
 			cursor: pointer;
 			display: block;
+			@include media($mobile){
+				@include shift(3);
+			}
 		}
 	}
-=======
-.inside-wrapper{
-  padding-top:144px;
-  @include shift();
-  @include span-columns(12);
-}
-
-.discover-more{
-  font-family:$Source-Sans-Pro;
-  color:$blue;
-}
-
-
-.work-container {
-  margin-top:235px;
-  overflow:hidden;
-  
-  .wrapper{
-    background-color: #DDE1E9;
-    position: relative;
-    .insider{
-      padding: 50px 0;
-      @include outer-container();
-      &:after{
-        content: " ";
-        position: absolute;
-        height: 100%;
-        width: 999%;
-        right: -999%;
-        background-color: #DDE1E9;
-        top: 0;
-      }
-      .work-wrapper{
-        @include shift(-0.5);    
-        @include span-columns(7);
-        img{
-          max-width: 100%;
-        }
-      }
-      .icon-wrapper{
-        @include shift(0.5);
-        @include span-columns(1);
-      }
-      .description-wrapper{
-        @include span-columns(4);
-        @include omega();
-      }
-  }
-  }
-}
-
-
-h5{
-  display:inline-block;
-  width:120px;
-  padding-top:100px;
-  font-size:15px;
-}
-
-
-.active{
-  color: #1E252B;
-}
-
-.inactive{
-  color: #6B788E;
-}
-
-
-.services-container{
-  padding-top:5.34%;
-  @include outer-container();
-  .planing, .design, .development{
-    @include span-columns(4);
-  }
-}
-
-.companies-container{
-  padding-top:7.49%;
-  .companies{
-    @include span-columns(2);
-      border: 1px solid #F1F2F3;
-      border-radius: 3px;
-      background-color: #FFFFFF;
-      text-align:center;
-  }
-}
-
-.contact-container{  
-    background-color: #003DA6;
-    height:382px;
-    margin-top:144px;
-    .our-work{ 
-        @include span-columns(3);
-        h5{
-        color: #FE1375;
-        }
-        h4{
-        color: #FFFFFF;
-        }
-        .p-basic{
-        color: #FFFFFF;
-        }
-        .discover-more{
-        color: #FFFFFF;
-        }
-    }
-}
-
-.contact{
-  @include shift(3);
-  @include span-columns(1);
-  img{
-      height:90px;
-      width:90px;
-  }
-}
-
-.hello{
-    @include span-columns(4);
-    h5{
-        color: #FE1375;
-    }
-    h4{
-        color: #FFFFFF;
-    }
-    .input{
-        display:inline;
-    }
-    #inptName, #inptEmail{
-        background-color:$blue;
-        border-style:none;
-        border: 1px solid #2359B6;
-        border-radius: 3px;
-        height:50px;
-        width:218px;
-        color:white;
-    }
-
-    #inptHelp{
-        margin-right:10px;
-        background-color:$blue;
-        border-style:none;
-        border: 1px solid #2359B6;
-        border-radius: 3px;
-        height:50px;
-        width:440px;
-    }
-
-    .button-white{
-        background-color:#FFFFFF;
-        color:$blue;
-        border:none;
-        border-radius: 3px;
-        box-shadow: 0 1px 3px 0 rgba(107,122,148,0.3), 0 2px 5px 0 rgba(35,73,139,0.08);
-        height:50px;
-        width:130px;
-        font-family: $PosteramaBlack;
-        font-size:$Baseline;
-        font-weight:900px;
-        line-height:22px;
-        cursor: pointer;
-        padding:10px;
-    }
->>>>>>> 84eaf528a04b49fb9f3b448ff23bb0d2be12d5ff
 }
